force-app/main/default/objects/nFORCE__Question__c/fields/nFORCE__Default_Text_Answer__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Default_Text_Answer__c</fullName>
    <description>This field is optional. The admin manually sets it in the Questionnaire Admin. If populated, when answering a question, the answer will be populated with this value for the Textbox.</description>
    <label>Default Text Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>