force-app/main/default/objects/nFORCE__Question__c/fields/nFORCE__Form_Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Form_Type__c</fullName>
    <description>This field is required. The admin manually sets it in the Questionnaire Admin. It describes the type of question.</description>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Textarea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>