force-app/main/default/objects/nFORCE__Question__c/fields/nFORCE__Group__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required and populates automatically. It associates a question to a questionnaire.</description>
    <label>Group</label>
    <referenceTo>nFORCE__Group__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>