force-app/main/default/objects/nFORCE__Question__c/fields/nFORCE__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Help_Text__c</fullName>
    <description>Users populate this field with the desired help text for a field in Questionnaires. By default, it is blank.</description>
    <inlineHelpText>Enter your desired help text for the associated field in Questionnaires.</inlineHelpText>
    <label>Help Text</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>