force-app/main/default/objects/nFORCE__Question__c/fields/nFORCE__Target_Answer_Field__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Target_Answer_Field__c</fullName>
    <description>Users populate this optional text field to capture the context record target field for a question that will be updated with an answer. By default, it is blank.</description>
    <inlineHelpText>Enter the context record object API and target field API using dot notation (for example, Account.Name). This field is case-sensitive.</inlineHelpText>
    <label>Target Answer Field</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>